simple sender and reciever

--- a/sender-and-receiver/sender/index.html
+++ b/sender-and-receiver/sender/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>Sender</h1>
+    <main id="root" class="debug"></main>
+    <!-- <h1>Sender</h1>
     <video id="localVideo" autoplay muted></video>
     <button id="startStream">Start Stream</button>
-    <button id="endStream" disabled>End Stream</button>
+    <button id="endStream" disabled>End Stream</button> -->
   </body>
 </html>
