--- a/sender-and-receiver/receiver/index.html
+++ b/sender-and-receiver/receiver/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sender</title>
+    <title>Receiver</title>
     <script type="module" src="/src/main.js" defer></script>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>Receiver</h1>
-    <video id="remoteVideo" autoplay playsinline muted></video>
-    <button id="playButton" style="display: none">Play Video</button>
+    <main id="root" class="debug">
+      <video muted autoplay id="remoteVideo"></video>
+    </main>
   </body>
 </html>
